src/objects/TripReport__c.object
<CustomObject>
    <description>Used in DEX601 Programming Lightning Components exercises.</description>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instructor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trip_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReviewType__c</fullName>
        <label>ReviewType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Training Center</fullName>
                </value>
                <value>
                    <fullName>Students</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Trip Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trip Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>